--- a/templates/index.html
+++ b/templates/index.html
@@ -13,10 +13,10 @@
 <body>
 <div >
     <div class="grid-container">
-    <div class="grid-item" style="height: 670px; width: 100%;">
-        <h2 id="key" style="line-height: 50px; margin: 0;">Satellite Cryptography Key : </h2>
-        <div id="map" style="height: 620px; width: 100%;"></div>
-        <div class="grid-container" style="border: 1px solid black; height: 250px; width: 900px; margin-top: 2em; margin-left: 30px;">
+    <div class="grid-item" style="height: 670px; width: 100%; margin-left: 1em;">
+        <h2 id="key" style="line-height: 50px; margin: 0; width: 900px;">Satellite Cryptography Key : </h2>
+        <div id="map" style="height: 620px; width: 900px; margin: 0"></div>
+        <div class="grid-container" style="border: 1px solid black; height: 250px; width: 900px; margin-top: 2em;">
             <div class="grid-item" style="border-width: 0px 1px 1px 0px; height: 70px; border-style: solid; width: 450px; padding:0.1em 0em;">
                 <h2>Normal Location</h2>
             </div>
@@ -41,7 +41,7 @@
     </div>
 {#    <div id="map" class="grid-item" ></div>#}
       <!--<div id="map" class="grid-item"></div>-->
-    <div class="grid-item" style="border: 1px solid black; border-radius: 10px; width: 800px; margin-left: 2em; height: 950px;">
+    <div class="grid-item" style="border: 1px solid black; border-radius: 10px; width: 800px; margin-left: 1em; height: 950px;">
         <div style="display: grid; grid-template-columns: auto auto;">
             <div class="select">
             <select name="slct" id="signal_type" style="text-align-last: center; font-size: 1.2em;" onchange="initialize()">
