기본 이미지

--- a/templates/index.html
+++ b/templates/index.html
@@ -545,6 +545,8 @@
             deception_index[b] = 0;
             decept_marker[b] = [];
         }
+        let img = document.getElementById('img');
+        img.src = 'static/img/set1/ACQ_NULL.jpg';
     }
 </script>
 </div>
